style.css
@font-face {
  font-family:Cousine;
  src:url(Sources/Fonts/Cousine.ttf);
	font-display: swap;
}

*{
	overflow-x:hidden;
  font-family:Cousine;
  font-weight:normal;
}
p,li{
  font-family: Arial;
  font-weight:500;
}
*::selection{
	background-color:#2C052E;
  opacity:0.5;
}
::-webkit-scrollbar {
  width:0px;
}
::-webkit-scrollbar-track {
  background:#f1f1f1;
}
::-webkit-scrollbar-thumb {
  background:#888;
	border-radius:5px;
	border-style:solid;
	border-color:#666;
	border-width:1px;
}
::-webkit-scrollbar-thumb:hover {
  background:#555;
}
a{
	text-decoration:none;
}
body{
	background-color:rgb(60,60,60);
	margin:0;
}
.background-image {
  background-image:url("Sources/Images/background2.webp");
  display: block;
  left: 0;
  position: fixed;
  right: 0;
  height:100vh;
  background-size:200% 200%;
  background-repeat: repeat;
  background-position: 50% 50%;
  z-index: 1;
  filter:blur(5px);
  -webkit-filter: blur(5px);
}
.content{
  position:relative;
  width:max(min(80vw,1000px));
  padding:15px;
	margin:auto;
	text-align:center;
  display:flex;
  flex-direction: column;
  background-color:rgb(60,60,60);
  z-index:2;
}
.data{
  background-color:rgb(60,60,60);
	text-align:center;
	align-content: center;
	color:white;  
}
.data h2{
	color:white;
	font-family:Cousine;
	font-weight:1000;
	font-size:5ch;
	margin-bottom:0ch;
	text-decoration:underline;
}
.data p{
	font-size:1.25em;
	margin-bottom:0;
}
.data ul {
  justify-content:left;
	text-align:left;
	margin:0;
}
.data-list {
	display: flex;
  justify-content:center;
	text-align:left;
	margin:0;
}
.data-list ul, .data-list ol{
	list-style-position:inside;
	font-size:1.25em;
}
.description{
  width:100%;
  height:100%;
  background-color: rgb(90,90,90);
  opacity: 0;
  vertical-align: top;
  margin-top:0;
  transition: opacity 0.25s;
  top:unset !important;
  z-index: 2;
  padding-top:5px;
}
.project:hover .description{
  opacity: 0.9;
}
.filler {
  margin-top:20px;
	width:calc(100% + 30px);
  margin-left:-15px;
	aspect-ratio: 5;
}
.filler.overlay{
  position: relative;
  top:calc(calc(max(min(80vw,1000px)) + 30px) / -5);
  margin-top:0;
  background: rgb(60,60,60);
  background: linear-gradient(0deg, rgba(60,60,60,1) 0%, rgba(0,0,0,0.5) 50%, rgba(60,60,60,1) 100%);
  margin-bottom:calc(calc(max(min(80vw,1000px)) + 30px) / -5);
  border-bottom:5px transparant;
}
.flexcontainer {
	display:flex;
	flex-wrap:wrap;
	justify-content:space-evenly;
}
.footer {
	overflow:hidden;
	background-color:rgb(30,30,30);
	color:white;
	bottom:0;
  display:flex;
  align-items: center;
  justify-content: center;
	width:calc(100% + 30px);
  margin-bottom:-15px;
  margin-left:-15px;
	height:max(75px,min(2vw,150px));
	text-align:center;
  margin-top:50px;
}
.footer p{
	font-family:Cousine;
}
.header{
	background-color:rgb(40,40,40);
  margin-top:-15px;
  width:calc(100% + 30px);
  margin-left:-15px;
  margin-bottom:15px;
  height:calc(5ch + 30px);
  display: flex;
  justify-content: left;
}
.header h2{
  margin-top: 15px;
  font-size:5ch;
}
h2{
  height:100%;
	color:white;
	font-family:Cousine;
	font-weight:700;
	font-size:10ch;
}
h3{
	color:white;
	font-family:Cousine;
	font-weight:700;
	font-size:5ch;
}
i{
  margin-bottom:-2px;
  line-height:18px;
  padding-right:2px;
}
.project{
  overflow:hidden;
  display:none;
	cursor:pointer;
	margin:1vw;
	background-color:rgba(80, 80, 80, 0.5);
	border-color:rgb(30,30,30);
	border-style:solid;
	border-width:2px;
	border-radius:5px;
  aspect-ratio:0.75;
}
.prev, .next {
  cursor: pointer;
  width: auto;
  margin: auto;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}
.link{
  text-decoration:underline;
  cursor:pointer;
  color:white;
}
.header img{
  margin-top:0;
  height:100%;
  width:auto;
  top:0;
}
.project p{
	width:100%;
  position:relative;
  top:calc(-100% - 5px);
  padding:auto;
  font-family:Cousine;
	overflow: hidden;
}
.project img{
  position:relative;
  top:calc(-100% - 5px);
  width:100%;
  aspect-ratio: 1;
}
.topimg{
	width:100vw;
	margin:0;
	/*background-image:url(Sources/Images/Thumbnail.png);*/
	background-color:rgba(80, 80, 80, 0.5);
	background-repeat:no-repeat;
	background-size:contain;
  height:15em;
	display:flex;
	justify-content:center;
}
.topimg h2{
  padding-top:50px;
	
	position:absolute;
	top:0;
	height:1.5em;
	z-index:1;
}
.topimg h3{
	position:absolute;
	padding-top:calc(1.5em + 50px);
	top:1.5em;
	z-index:1;
	text-decoration:underline;
}
.version{
  color:rgba(255,255,255,0.2);
  position:absolute;
  top:1px;
  left:2px;
  z-index:3;
  font-size:8px;
  font-family: Cousine;
}

@media all and (max-width:500px) {
  .content{
    width:100vw;
    padding:0;
  }
}

@media all and (max-width:600px) {
  .header img{
    display:none;
  }
  .header h2{
    margin-left:25px;
  }
}

@media all and (max-width:415px) {
  .header h2{
    display: none;
  }
  .header img{
    display: block;
    height:calc(100% - 5px);
    padding-top:10px;
  }
}

@media all and (max-width:750px) {
  .project{
    display: none;
    width:75%;
  }
  .prev{
    padding:0;
    margin-left:5px;
    margin-right:5px;
  }
  .next{
    padding:0;
    margin-left:5px;
    margin-right:5px;
  }
  .flexcontainer{
    grid-template-columns: 1fr 5fr 1fr;
    flex-wrap: nowrap;
  }
}

@media all and (min-width:751px) {
  .prev,.next{
    display:none;
  }
  .project{
    display:block;
    width:45%;
  }
}

